fixed ie layout issue

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -68,10 +68,11 @@ ul {
   clear: right;
   float: left;
   padding-right: 10px;
+  display: inline;
 }
 
 #code_navigation ul li .label {
-  
+  display: inline;
 }
 
 #content {
